# helios

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  _typos.toml  biome.json  components.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  renovate.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/rules/: capabilities.md  frontend.md  rust-backend.md
.claude/skills/adding-a-page/: SKILL.md
.claude/skills/adding-a-tauri-command/: SKILL.md
.claude/skills/adding-a-tauri-plugin/: SKILL.md
.claude/skills/configuring-capabilities-and-permissions/: SKILL.md
.claude/skills/debugging-the-ipc-boundary/: SKILL.md
.claude/skills/releasing-the-app/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/rulesets/: main.json
.github/workflows/: build-check.yml  ci.yml  codeql.yml  pr-title.yml  release.yml
docs/: RELEASE_VERIFICATION.md
docs/recipes/: deep-link-autostart.md  e2e-webdriver.md  i18n.md  isolation.md  mobile.md  sentry.md
docs/superpowers/plans/: 2026-07-06-enterprise-tauri-starter.md
docs/superpowers/specs/: 2026-07-06-enterprise-tauri-starter-design.md
scripts/: bootstrap.sh  generate-signing-key.sh  setup.mjs
src/: App.test.tsx  App.tsx  bindings.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: app.rs  settings.rs
src/app/: error-boundary.test.tsx  error-boundary.tsx  providers.test.tsx  providers.tsx  router.tsx  routes.tsx
src/app/layouts/: app-shell.tsx
src/features/home/: home-page.test.tsx  home-page.tsx
src/features/settings/: index.ts  settings-page.test.tsx  settings-page.tsx  use-settings.ts
src/features/updater/: index.ts  update-card.test.tsx  update-card.tsx  use-updater.ts
src/lib/: storage.test.ts  storage.ts  tauri.ts
src/lib/ipc/: index.ts
src/shared/ui/: card.tsx  dialog.tsx  dropdown-menu.tsx  sonner.tsx
src/test/: setup.ts
